--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+
     // from https://stackoverflow.com/questions/36494938/debug-run-angular2-typescript-with-visual-studio-code
     {
       "name": "Launch localhost with sourcemaps",
@@ -14,7 +15,8 @@
       "webRoot": "${workspaceRoot}",
       "sourceMapPathOverrides": {
         "webpack:/*": "${webRoot}/*"
-      }
+      },
+      "runtimeArgs": ["--profile-directory=Profile 2"]
     }
   ]
 }
