more alpha environment

--- a/angular.json
+++ b/angular.json
@@ -53,6 +53,14 @@
                   "with": "src/environments/environment.staging.ts"
                 }
               ]
+            },
+            "alpha": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.alpha.ts"
+                }
+              ]
             }
           }
         },
