--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "4.4.3",
     "@angular/router": "4.4.3",
-    "@types/lodash": "^4.14.87",
+    "@types/lodash": "4.14.121",
     "accounting": "^0.4.1",
     "core-js": "^2.4.1",
     "debug": "^2.6.8",
@@ -59,6 +59,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "2.5.3"
   }
 }
