--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ceilings",
-  "version": "0.0.77",
+  "version": "0.0.78",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -12,18 +12,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.4.3",
-    "@angular/cdk": "2.0.0-beta.11",
-    "@angular/common": "4.4.3",
-    "@angular/compiler": "4.4.3",
-    "@angular/core": "4.4.3",
-    "@angular/forms": "4.4.3",
-    "@angular/http": "4.4.3",
-    "@angular/material": "2.0.0-beta.11",
-    "@angular/platform-browser": "4.4.3",
-    "@angular/platform-browser-dynamic": "4.4.3",
-    "@angular/router": "4.4.3",
-    "@types/lodash": "4.14.121",
+    "@angular/animations": "6.0.5",
+    "@angular/cdk": "^6.0.0",
+    "@angular/common": "6.0.5",
+    "@angular/compiler": "6.0.5",
+    "@angular/core": "6.0.5",
+    "@angular/forms": "6.0.5",
+    "@angular/http": "6.0.5",
+    "@angular/material": "^6.0.0",
+    "@angular/platform-browser": "6.0.5",
+    "@angular/platform-browser-dynamic": "6.0.5",
+    "@angular/platform-server": "6.0.5",
+    "@angular/router": "6.0.5",
+    "@types/lodash": "^4.14.87",
     "accounting": "^0.4.1",
     "core-js": "^2.4.1",
     "debug": "^2.6.8",
@@ -31,21 +32,22 @@
     "html2canvas": "^0.5.0-beta4",
     "jszip": "^3.1.4",
     "point-in-polygon": "^1.0.1",
-    "rxjs": "^5.1.0",
-    "syd-tiling": "0.0.15",
-    "syd-visualization": "0.0.85",
-    "zone.js": "^0.8.4",
+    "robust-point-in-polygon": "^1.0.3",
+    "rxjs": "^6.2.1",
+    "syd-tessellation": "0.0.69",
+    "syd-tiling": "0.0.16",
+    "syd-visualization": "0.0.88",
     "xml-writer": "1.7.0",
-    "syd-tessellation": "0.0.66"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.7",
-    "@angular/compiler-cli": "4.4.3",
-    "@angular/language-service": "4.4.3",
+    "@angular/cli": "6.0.8",
+    "@angular/compiler-cli": "6.0.5",
+    "@angular/language-service": "6.0.5",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.60",
-    "codelyzer": "~3.0.1",
+    "codelyzer": "^4.2.1",
     "grunt": "^1.0.1",
     "grunt-bump": "^0.8.0",
     "jasmine-core": "~2.6.2",
@@ -59,6 +61,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "2.5.3"
+    "typescript": "2.7.2",
+    "@angular-devkit/build-angular": "~0.6.8"
   }
 }
