--- a/package.json
+++ b/package.json
@@ -12,18 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.0",
+    "@angular/animations": "^8.2.3",
     "@angular/cdk": "^7.0.0",
-    "@angular/common": "^7.0.0",
-    "@angular/compiler": "^7.0.0",
-    "@angular/core": "^7.0.0",
-    "@angular/forms": "^7.0.0",
-    "@angular/http": "^7.0.0",
+    "@angular/common": "^8.2.3",
+    "@angular/compiler": "^8.2.3",
+    "@angular/core": "^8.2.3",
+    "@angular/forms": "^8.2.3",
     "@angular/material": "^7.0.0",
-    "@angular/platform-browser": "^7.0.0",
-    "@angular/platform-browser-dynamic": "^7.0.0",
-    "@angular/platform-server": "^7.0.0",
-    "@angular/router": "^7.0.0",
+    "@angular/platform-browser": "^8.2.3",
+    "@angular/platform-browser-dynamic": "^8.2.3",
+    "@angular/platform-server": "^8.2.3",
+    "@angular/router": "^8.2.3",
     "@types/lodash": "^4.14.87",
     "accounting": "^0.4.1",
     "core-js": "^2.4.1",
@@ -38,16 +37,16 @@
     "syd-tiling": "0.0.16",
     "syd-visualization": "0.0.88",
     "xml-writer": "1.7.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "^7.0.0",
-    "@angular/compiler-cli": "^7.0.0",
-    "@angular/language-service": "^7.0.0",
+    "@angular/cli": "^8.2.2",
+    "@angular/compiler-cli": "^8.2.3",
+    "@angular/language-service": "^8.2.3",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^7.0.0",
-    "codelyzer": "^4.2.1",
+    "codelyzer": "^5.0.1",
     "grunt": "^1.0.1",
     "grunt-bump": "^0.8.0",
     "jasmine-core": "~2.6.2",
@@ -61,7 +60,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~3.1.0",
-    "@angular-devkit/build-angular": "~0.6.8"
+    "typescript": "~3.5.3",
+    "@angular-devkit/build-angular": "~0.802.2"
   }
 }
