Manually redirect to https

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -22,8 +22,14 @@ services:
       labels:
         - traefik.enable=true
         - traefik.docker.network=webgateway
+        # Secure redirect
+        - traefik.http.routers.design-redirect.rule=Host(`design.3-form.com`, `ceilings.3-form.com`, `seeyond.3-form.com`)
+        - traefik.http.routers.design-redirect.entrypoints=web
+        - traefik.http.routers.design-redirect.middlewares=redirect@file
+        # Secure
         - traefik.http.routers.design.rule=Host(`design.3-form.com`, `ceilings.3-form.com`, `seeyond.3-form.com`)
         - traefik.http.routers.design.middlewares=ceilings-redirect@docker, seeyond-redirect@docker
+        - traefik.http.routers.design.entrypoints=websecure
         - traefik.http.routers.design.tls=true
         - traefik.http.services.design.loadbalancer.server.port=80
         # ceilings redirect
