--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.78",
   "license": "MIT",
   "scripts": {
+    "build:development": "npm run set-dev-env && ng build",
     "build:production": "ng build --configuration=production",
     "build:alpha": "ng build --configuration=alpha",
+    "dev": "ng serve --host 0.0.0.0 --disable-host-check",
+    "set-dev-env": "ts-node -O '{\"module\": \"commonjs\"}' set-dev-env.ts",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -42,12 +45,13 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.802.2",
     "@angular/cli": "^8.2.2",
     "@angular/compiler-cli": "^8.2.3",
     "@angular/language-service": "^8.2.3",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^7.0.0",
+    "@types/node": "^7.10.14",
     "codelyzer": "^5.0.1",
     "grunt": "^1.0.1",
     "grunt-bump": "^0.8.0",
@@ -60,9 +64,8 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
-    "ts-node": "~3.0.4",
+    "ts-node": "^9.1.1",
     "tslint": "~5.3.2",
-    "typescript": "~3.5.3",
-    "@angular-devkit/build-angular": "~0.802.2"
+    "typescript": "~3.5.3"
   }
 }
